--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@
 html
   head
     title Yapper - HTML5 Communication Demo
-    link(rel='stylesheet', href='/stylesheets/styles.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/styles.css')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Open+Sans:400,700')
   body
     div#content!= body
   script(src='/javascripts/mootools-core-1.4.2-full-nocompat-yc.js')
